periodic cleanup of stale series; fix general concurrency issues